fix borders and alignment in 2nd section

--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ section {
 
 .doWhat p {
     color: bisque;
-    padding: 6rem 8rem 0rem 2rem;
+    padding: 8rem 4rem 0rem 2rem;
     font-size: 12px;
     letter-spacing: 1.3px;
     line-height: 1.5rem;
@@ -154,7 +154,7 @@ section {
     position: absolute;
     color: white !important;
     font-size: 5rem;
-    padding-left: 0.8rem;
+    padding-left: 1.8rem;
     letter-spacing: -0.5rem;
     text-shadow: 2px 2px 5px black;
     font-family: ceraRegular;
@@ -197,9 +197,8 @@ section.doWhat .background .cover-image .container-2,
     position: absolute;
     top: 0%;
     left: 50%;
-    width: 50%;
-    height: 50%;
-    /* padding: 1rem 0rem; */
+    width: 48.4%;
+    height: 49.5%;
     border: 1px solid;
     background-color: transparent;
     z-index: 5;
@@ -308,16 +307,16 @@ section.doWhat .background .cover-text {
     left: 50%;
     width: 50%;
     height: 50%;
-    margin: -3rem 0rem;
 }
 
 section.doWhat .background .cover-text .container {
     position: absolute;
-    top: 50%;
-    width: 100%;
-    height: auto;
-    -webkit-transform: translate3d(0px, -50%, 0px);
-    transform: translate3d(0px, -50%, 0px);
+    width: 96.8%;
+    height: 99.5%;
+    border: 1px solid;
+    /* top: 50%; */
+    /* -webkit-transform: translate3d(0px, -50%, 0px); */
+    /* transform: translate3d(0px, -50%, 0px); */
 }
 
 section.doWhat .cover-text .cont1,
